--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -182,8 +182,8 @@
 <!--================================================================-->
 
 <!-- Translate -->
-<section class="projects-section bg-white fadeIn undisplayed" id="Translate" style="margin-top:0px;">
-    <div class="container-fluid" style="width:100%; text-align:center;">
+<section class="projects-section bg-white fadeIn undisplayed" id="Translate" style="margin-top:20px;">
+    <div class="container-fluid" style="width:100%; text-align:center; margin-top:20px;">
      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
@@ -328,7 +328,7 @@
 <!--================================================================-->
 
 <!-- About us section -->
-<section class="projects-section bg-light fadeIn undisplayed" id="About" style="margin-top:0px;">
+<section class="projects-section bg-light fadeIn undisplayed" id="About" style="margin-top:20px;">
 
     <div class="container-fluid" style="margin-top:20px;">
 
