--- a/covid19/index.html
+++ b/covid19/index.html
@@ -101,8 +101,8 @@
 <!--================================================================-->
 
 <!-- ProjectInfo -->
-<section class="projects-section bg-light fadeIn" id="ProjectInfo">
-    <div class="container-fluid" align="center">
+<section class="projects-section bg-light fadeIn" id="ProjectInfo" style="margin-top:20px;">
+    <div class="container-fluid" align="center" style="margin-top:20px;">
         <!-- Challenge Row-->
         <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:40px;">
             <div class="col" style="padding: 0; margin-right:40px;">
@@ -190,8 +190,8 @@
 <!--================================================================-->
 
 <!-- Translate -->
-<section class="projects-section bg-white fadeIn undisplayed" id="Translate" style="margin-top:0px;">
-    <div class="container-fluid" style="width:100%; text-align:center;">
+<section class="projects-section bg-white fadeIn undisplayed" id="Translate" style="margin-top:20px;">
+    <div class="container-fluid" style="width:100%; text-align:center; margin-top:20px;">
      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
@@ -335,7 +335,7 @@
 <!--================================================================-->
 
 <!-- About us section -->
-<section class="projects-section bg-light fadeIn undisplayed" id="About" style="margin-top:0px;">
+<section class="projects-section bg-light fadeIn undisplayed" id="About" style="margin-top:20px;">
 
     <div class="container-fluid" style="margin-top:20px;">
 
