--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -262,13 +262,13 @@
               <div id="dayOfTheWeekBox" class="varBox">
                 <label for="dayOfTheWeek" style="display: inline-block;">Dag van de week:</label>
                 <select name="dayOfTheWeek" id="dayOfTheWeek">
-                  <option value="Monday">Maandag</option>
-                  <option value="Tuesday">Dinsdag</option>
-                  <option value="Wednesday">Woensdag</option>
-                  <option value="Thursday">Donderdag</option>
-                  <option value="Friday">Vrijdag</option>
-                  <option value="Saturday">Zaterdag</option>
-                  <option value="Sunday">Zondag</option>
+                  <option value="maandag">Maandag</option>
+                  <option value="dinsdag">Dinsdag</option>
+                  <option value="woensdag">Woensdag</option>
+                  <option value="donderdag">Donderdag</option>
+                  <option value="vrijdag">Vrijdag</option>
+                  <option value="zaterdag">Zaterdag</option>
+                  <option value="zondag">Zondag</option>
                 </select>
                <input type="submit" style="display: inline-block;" onclick="checkText(document.getElementById('mySiGML').value, document.getElementById('dayOfTheWeek').value);">
               </div>
