--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -101,7 +101,7 @@
 
 <!-- ProjectInfo -->
 <section class="projects-section bg-light fadeIn" id="ProjectInfo">
-  <div class="container-fluid">
+  <div class="container-fluid" align="center">
       <!-- Challenge Row-->
       <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:40px;">
           <div class="col" style="padding: 0; margin-right:40px;">
@@ -328,9 +328,9 @@
 <!--================================================================-->
 
 <!-- About us section -->
-<section class="projects-section bg-light fadeIn undisplayed" id="About" style="margin-top:20px;">
+<section class="projects-section bg-light fadeIn undisplayed" id="About">
 
-    <div class="container-fluid" style="margin-top:20px;">
+    <div class="container-fluid" height="100%" align="center">
 
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
 
