--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -104,7 +104,7 @@
   <div class="container-fluid" align="center">
       <!-- Challenge Row-->
       <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:40px;">
-          <div class="col" style="padding: 0; margin-right:40px;">
+          <div class="col" >
             <div class="bg-light text-center h-100 project" style="padding: 0; margin:0px;">
                 <div class="d-flex h-100" style="padding: 0; margin:0px;">
                     <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding: 0; margin:0px;">
