--- a/covid19/index.html
+++ b/covid19/index.html
@@ -190,7 +190,7 @@
 <!--================================================================-->
 
 <!-- Translate -->
-<section class="projects-section bg-white fadeIn undisplayed" id="Translate" style="margin-top:20px;">
+<section class="projects-section bg-light fadeIn undisplayed" id="Translate" style="margin-top:20px;">
     <div class="container-fluid" style="width:100%; text-align:center; margin-top:20px;">
      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
@@ -423,7 +423,7 @@
 <!--================================================================-->
 
 <!-- Suggestions section -->
-<section class="projects-section bg-white fadeIn undisplayed" id="Suggestions"  style="margin-top:20px;">
+<section class="projects-section bg-light fadeIn undisplayed" id="Suggestions"  style="margin-top:20px;">
       <div class="container-fluid" style="margin-top:20px;">
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
             <!-- Column for suggestions  -->
