--- a/covid19/index.html
+++ b/covid19/index.html
@@ -472,7 +472,7 @@
 <!--================================================================-->
 
 <!-- Footer-->
-<footer class="footer bg-white small text-center text-black-50"><div class="container" style="position: fixed; bottom: 0px;">&copy;2020 SignLab Amsterdam <i class="material-icons">email</i>: signlab.amsterdam@gmail.com</div></footer>
+<footer class="footer bg-white small text-center text-black-50"><div class="container" style="position: sticky; bottom: 0px;">&copy;2020 SignLab Amsterdam <i class="material-icons">email</i>: signlab.amsterdam@gmail.com</div></footer>
 
 
 <!-- Javascripts -->
