--- a/covid19/index.html
+++ b/covid19/index.html
@@ -63,7 +63,7 @@
 
 <!-- Navigation-->
 <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container-fluid" align="center">
+    <div class="container-fluid" style="width: 100%;">
         <a class="navbar-brand" href="#page-top">
         <img src="../images/hand-icon.png" height="25">
           SignLab Amsterdam
@@ -102,7 +102,7 @@
 
 <!-- ProjectInfo -->
 <section class="projects-section bg-light fadeIn" id="ProjectInfo" style="margin-top:20px;">
-    <div class="container-fluid" align="center" style="margin-top:20px;">
+    <div class="container-fluid" style="margin-top:20px;">
         <!-- Challenge Row-->
         <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:40px;">
             <div class="col" style="padding: 0; margin-right:40px;">
