--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -100,7 +100,7 @@
 <!--================================================================-->
 
 <!-- ProjectInfo -->
-<section class="projects-section bg-light fadeIn" id="ProjectInfo" style="margin-top:20px;">
+<section class="projects-section bg-light fadeIn" id="ProjectInfo">
   <div class="container-fluid" style="margin-top:20px;">
       <!-- Challenge Row-->
       <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:40px;">
