--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -338,7 +338,7 @@
             <div class="col-xl-6 col-lg-6">
 
                 <!-- Team -->
-                <div class="project-text text-center text-lg-left">
+                <div class="project-text text-center text-lg-left" style="padding-top: 0px;">
 
                     <h4 class="mb-4">Team</h4>
 
@@ -370,7 +370,7 @@
 
                 <!-- East Anglia -->
 
-                <div class="project-text text-center text-lg-left">
+                <div class="project-text text-center text-lg-left" style="padding-top: 0px;">
                     <h4 class="mb-4">Partners</h4>
                     <h5>University of East Anglia</h5>
                     <p class="text-black-50 mb-3 mt-1">
