witte streep aan de bovenkant inlogpagina weg

--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -182,7 +182,7 @@
 <!--================================================================-->
 
 <!-- Translate -->
-<section class="projects-section bg-light fadeIn undisplayed" id="Translate" style="margin-top:20px;">
+<section class="projects-section bg-light fadeIn undisplayed" id="Translate">
     <div class="container-fluid" style="width:100%; margin-top:20px;">
      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
@@ -330,7 +330,7 @@
 <!-- About us section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="About">
 
-    <div class="container-fluid" style="text-align: center;">
+    <div class="container-fluid" style="text-align: center;" style="margin-top: 20px;">
 
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
 
@@ -416,7 +416,7 @@
 <!--================================================================-->
 
 <!-- Suggestions section -->
-<section class="projects-section bg-light fadeIn undisplayed" id="Suggestions" style="margin-top:20px;">
+<section class="projects-section bg-light fadeIn undisplayed" id="Suggestions">
       <div class="container-fluid" style="margin-top:20px;">
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
             <!-- Column for suggestions  -->
@@ -442,7 +442,7 @@
 <!--================================================================-->
 
 <!-- Resources section -->
-<section class="projects-section bg-light fadeIn undisplayed" id="Resources" style="margin-top:20px;">
+<section class="projects-section bg-light fadeIn undisplayed" id="Resources">
       <div class="container-fluid" style="margin-top:20px;">
           <div class="project-text pt-0 text-lg-left">
               <p class="mb-3 text-black-50">
