--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -101,9 +101,9 @@
 
 <!-- ProjectInfo -->
 <section class="projects-section bg-light fadeIn" id="ProjectInfo">
-  <div class="container-fluid" style="margin-top:20px;">
+  <div class="container-fluid" style="margin-top:40px;">
       <!-- Challenge Row-->
-      <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:40px;">
+      <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:0px;">
           <div class="col" >
             <div class="bg-light text-center h-100 project" style="padding: 0; margin:0px;">
                 <div class="d-flex h-100" style="padding: 0; margin:0px;">
@@ -183,7 +183,7 @@
 
 <!-- Translate -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Translate">
-    <div class="container-fluid" style="width:100%; margin-top:20px;">
+    <div class="container-fluid" style="width:100%; margin-top:40px;">
      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
@@ -330,9 +330,9 @@
 <!-- About us section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="About">
 
-    <div class="container-fluid" style="text-align: center;" style="margin-top: 20px;">
+    <div class="container-fluid" style="text-align: center;" style="margin-top: 40px;">
 
-        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+        <div class="row align-items-start no-gutters mb-4 mb-lg-5" style="margin-top:0px;">
 
             <!-- Column for Team and Funding -->
             <div class="col-xl-6 col-lg-6">
@@ -417,7 +417,7 @@
 
 <!-- Suggestions section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Suggestions">
-      <div class="container-fluid" style="margin-top:20px;">
+      <div class="container-fluid" style="margin-top:40px;">
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
             <!-- Column for suggestions  -->
             <div class="col-xl-auto">
@@ -443,7 +443,7 @@
 
 <!-- Resources section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Resources">
-      <div class="container-fluid" style="margin-top:20px;">
+      <div class="container-fluid" style="margin-top:40px;">
           <div class="project-text pt-0 text-lg-left">
               <p class="mb-3 text-black-50">
                 Het
