--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -332,7 +332,7 @@
 
     <div class="container-fluid" style="text-align: center;" style="margin-top: 40px;">
 
-        <div class="row align-items-start no-gutters mb-4 mb-lg-5" style="margin-top:0px;">
+        <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:0px;">
 
             <!-- Column for Team and Funding -->
             <div class="col-xl-6 col-lg-6">
