--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -335,7 +335,7 @@
         <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:0px;">
 
             <!-- Column for Team and Funding -->
-            <div class="col-xl-6 col-lg-6">
+            <div class="col" style="padding: 0; margin-right:40px;">
 
                 <!-- Team -->
                 <div class="project-text text-center text-lg-left" style="padding-top: 0px;">
@@ -366,7 +366,7 @@
 
             <!-- Column for partners -->
 
-            <div class="col-xl-6 col-lg-6">
+            <div class="col" style="padding: 0; margin-right:40px;">
 
                 <!-- East Anglia -->
 
