--- a/covid19/index.html
+++ b/covid19/index.html
@@ -100,10 +100,10 @@
 <!--================================================================-->
 
 <!-- ProjectInfo -->
-<section class="projects-section bg-light fadeIn" id="ProjectInfo" style="margin-top:20px;">
-    <div class="container-fluid" style="margin-top:20px;">
+<section class="projects-section bg-light fadeIn" id="ProjectInfo">
+    <div class="container-fluid" style="margin-top:40px;">
         <!-- Challenge Row-->
-        <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:40px;">
+        <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:0px;">
             <div class="col" style="padding: 0; margin-right:40px;">
                 <div class="bg-light text-center h-100 project" style="padding: 0; margin:0px;">
                     <div class="d-flex h-100" style="padding: 0; margin:0px;">
@@ -189,8 +189,8 @@
 <!--================================================================-->
 
 <!-- Translate -->
-<section class="projects-section bg-light fadeIn undisplayed" id="Translate" style="margin-top:20px;">
-    <div class="container-fluid" style="width:100%; text-align:center; margin-top:20px;">
+<section class="projects-section bg-light fadeIn undisplayed" id="Translate">
+    <div class="container-fluid" style="width:100%; margin-top:40px;">
      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
@@ -334,9 +334,9 @@
 <!--================================================================-->
 
 <!-- About us section -->
-<section class="projects-section bg-light fadeIn undisplayed" id="About" style="margin-top:20px;">
+<section class="projects-section bg-light fadeIn undisplayed" id="About">
 
-    <div class="container-fluid" style="margin-top:20px;">
+    <div class="container-fluid" style="margin-top:40px;">
 
         <div class="row align-items-start no-gutters mb-4 mb-lg-5" >
 
@@ -422,24 +422,19 @@
 <!--================================================================-->
 
 <!-- Suggestions section -->
-<section class="projects-section bg-light fadeIn undisplayed" id="Suggestions" style="margin-top:20px;">
-      <div class="container-fluid" style="margin-top:20px;">
-        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
-            <!-- Column for suggestions  -->
-            <div class="col-xl-auto">
-              <div class="project-text pt-0 text-lg-left">
-                <h4>Suggestions</h4>
-                  <p class="mb-3 text-black-50">
-                    Enter your suggestion(s) for words or phrases or any other feedback you have here.<br>
-                  </p>
-                  <p class="mb-3 text-black-50">
-                    <textarea id="suggestions" class="inputBox" rows="4" placeholder="Suggestion" onkeydown="if (event.keyCode == 13){event.preventDefault(); addSuggestion(document.getElementById('suggestions').value, 'alertZonMwTran');}"></textarea>
-                    <input type="button" value="Send" style="display: inline-block;" onclick='addSuggestion(document.getElementById("suggestions").value, "alertZonMwTran");'/>
-                  </p>
-                  <hr class="d-none d-lg-block mb-0 ml-0" />
-              </div>
-            </div>
-          </div>
+<section class="projects-section bg-light fadeIn undisplayed" id="Suggestions">
+      <div class="container-fluid" style="margin-top:40px;">
+        <div class="project-text pt-0 text-lg-left">
+          <h4>Suggestions</h4>
+            <p class="mb-3 text-black-50">
+              Enter your suggestion(s) for words or phrases or any other feedback you have here.<br>
+            </p>
+            <p class="mb-3 text-black-50">
+              <textarea id="suggestions" class="inputBox" rows="4" placeholder="Suggestion" onkeydown="if (event.keyCode == 13){event.preventDefault(); addSuggestion(document.getElementById('suggestions').value, 'alertZonMwTran');}"></textarea>
+              <input type="button" value="Send" style="display: inline-block;" onclick='addSuggestion(document.getElementById("suggestions").value, "alertZonMwTran");'/>
+            </p>
+            <hr class="d-none d-lg-block mb-0 ml-0" />
+        </div>
       </div>
 </section>
 
@@ -448,8 +443,8 @@
 <!--================================================================-->
 
 <!-- Resources section -->
-<section class="projects-section bg-light fadeIn undisplayed" id="Resources" style="margin-top:20px;">
-      <div class="container-fluid" style="margin-top:20px;">
+<section class="projects-section bg-light fadeIn undisplayed" id="Resources">
+      <div class="container-fluid" style="margin-top:40px;">
           <div class="project-text pt-0 text-lg-left">
               <p class="mb-3 text-black-50">
                 The
